--- a/404.html
+++ b/404.html
@@ -18,30 +18,20 @@ layout: base
 </style>
 
 <div class="container">
-  <h1>404</h1>
+	<h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found. Perhaps try a search?</p>
-</div>
+	<p>
+		<strong>Page not found :(</strong>
+	</p>
 
-<script async src="https://cse.google.com/cse.js?cx=004234720413995998423:vyup6kxwuhp"></script>
-<div class="gcse-search"></div>
+	<p>
+		Files on this site:
+	</p>
 
-<hr>
-
-Files on this site:
-
-{% assign postsByYear = site.posts | group_by_exp:"post", "post.date | date: '%Y'" %}
-{% for year in postsByYear %}
-<h2 style="text-align: center;">{{ year.name }}</h2>
-{% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
-{% for month in postsByMonth %}
-<h3>{{ month.name }}</h3>
 <ul>
-{% for post in month.items %}
-<li><a href="{{ post.url }}">{{ post.title }}</a></li>
-{% endfor %}
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
 </ul>
-{% endfor %}
-<hr>
-{% endfor %}
