HTML file experiment

--- a/_posts/1928-06-28-your-ford-model-t.html
+++ b/_posts/1928-06-28-your-ford-model-t.html
@@ -26,7 +26,12 @@ C. R. GLEASON CO.
 
 Bottineau, N. Dak.
 
+<figure>
 ![Get money out of your Ford Model T](/assets/1928-06-29-Ford-Model-T.jpg "Get money out of your Ford Model T")
+<figcaption>
+Get money out of your Ford Model T
+</figcaption>
+</figure>
 
 kramdown
 : A Markdown-superset converter
