Fix search page

--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@ layout: page
 	Files on this site:
 </p>
 
-<ul>
+<ul style="text-align: left;">
   {% for post in site.posts %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
