--- a/404.html
+++ b/404.html
@@ -23,12 +23,13 @@ layout: base
 	<p>
 		<strong>Page not found :(</strong>
 	</p>
+</div>
 
 	<p>
 		Files on this site:
 	</p>
 
-<ul>
+<ul style="text-align: left;">
   {% for post in site.posts %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
