--- a/404.html
+++ b/404.html
@@ -30,6 +30,6 @@ layout: base
 </p>
 <ul style="text-align: left;">
 	{% for post in site.posts %}
-	<li> <a href="{{ post.url }}">{{ post.title }}</a> </li>
+	<li> <a href="{{ post.url }}">{{ post.title | smartify }}</a> </li>
 	{% endfor %}
 </ul>
