revert to stock

--- a/404.html
+++ b/404.html
@@ -18,12 +18,8 @@ layout: base
 </style>
 
 <div class="container">
-	<h1>
-		404
-	</h1>
-	<p>
-		<strong>Page not found :(</strong>
-	</p>
+	<h1>404</h1>
+	<p><strong>Page not found :(</strong></p>
 </div>
 <p>
 	Files on this site:
