--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ title: 404 error --- Page not found
 layout: base
 ---
 
-<style>
+<style type="text/css" media="screen">
   .container {
     margin: 10px auto;
     max-width: 600px;
@@ -20,12 +20,13 @@ layout: base
 <div class="container">
 	<h1>404</h1>
 	<p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found. Perhaps try a search?</p>
 </div>
-<p>
-	Files on this site:
-</p>
-<ul style="text-align: left;">
-	{% for post in site.posts %}
-	<li> <a href="{{ post.url }}">{{ post.title | smartify }}</a> </li>
-	{% endfor %}
-</ul>
+
+{% include search-lunr.html %}
+
+<hr>
+
+Files on this site:
+
+{% include files-on-this-site.html %}
